# dotfiles

./: .env.example  .gitignore  LICENCE.md  README.md  pyproject.toml  setup.sh
.claude/: CLAUDE.md  settings.json
backup-temp/git/: run
conf/: packages.toml  symlinks.toml
conf/core/: paths.sh
conf/functions/: _c  cpc  extract  gf  y
core/: setup-dotfiles.sh
docs/: tmux.md  vim.md  zsh-alias.md
dotfiles/atuin/: install.sh  setup.sh
dotfiles/docker/: aliases.zsh  install.sh
dotfiles/gh/: install.sh  setup.sh
dotfiles/git/: .gitconfig  .gitconfig.local.example  aliases.zsh  install.sh  setup.sh
dotfiles/nvm/: install.sh  path.zsh
dotfiles/pdm/: install.sh
dotfiles/ssh/: setup.sh
dotfiles/system/: aliases.zsh  env.zsh  keys.zsh  path.zsh
dotfiles/test/: .test  aliases.zsh  install.sh  test.symlink
dotfiles/tmux/: .tmux.conf  install.sh  setup.sh
dotfiles/vim/: .vimrc  install.sh
dotfiles/zoxide/: install.sh
dotfiles/zsh/: .zshrc  config.zsh  install.sh  path.zsh
functions/: c  cpc
script/: bootstrap  install
scripts/: bootstrap  install  install-packages  install-packages.sh  install-tools.sh  install.sh  setup-all.sh  update-env.sh
src/: main.py
src/cli/: app.py  config.py  env.py  log.py  packages.py  runner.py  symlinks.py  tools.py
src/modules/: __init__.py  atuin.py  base.py  docker.py  gh.py  git.py  nvm.py  ssh.py  tmux.py  vim.py  zsh.py
test/: install.sh
tests/: conftest.py  test_config.py  test_env.py  test_log.py  test_packages.py  test_runner.py  test_symlinks.py
utils/: paths.sh  prints.sh  setup-dotfiles.sh
(+41 files in other folders)
