[project]
name = "dotfiles"
version = "1.0.0"
description = "Personal dotfiles management CLI"
requires-python = ">=3.12"
dependencies = ["typer>=0.9", "rich>=13"]

[project.scripts]
dotfiles = "cli.app:app_main"
dot = "cli.app:dot_main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
